Fix svg icon close and hamburger too small on iphone browsers

--- a/scss/components/button/_close-btn.scss
+++ b/scss/components/button/_close-btn.scss
@@ -15,6 +15,7 @@
 		$outline: 2px solid var.$bc-ternary,
 		$outline-offset: false,
 		$transition: false);
+	padding: 0;
 }
 
 .close-btn-icon {
